--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com" media="all">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin media="all">
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-	<meta charset="UTF-8">
+
+	<meta 
+	charset="UTF-8" 
+	name="description" 
+	content="Services de photographie professionnelle par Nina Carducci. Capturer des moments précieux avec une perspective unique. Contact pour des séances photos personnalisées, des retouches et la création d'album."
+	>
 
 	<title>Nina Photographe Professionnelle 📷</title>
 </head>
@@ -23,7 +28,7 @@
 
 			<li>
 				<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
-					<img src="assets/images/instagram.webp" alt="Image du Réseau Social Instagram">
+					<img src="assets/images/instagram.webp" alt="Image du Réseau Social Instagram" loading="lazy">
 				</a>
 			</li>
 		</ul>
@@ -43,21 +48,21 @@
 				src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" 
 				class="d-block w-100" 
 				alt="Image d'un businessman Japonais de dos, image du carousel"
-				>
+				loading="lazy">
 			</div>
 			<div class="carousel-item">
 				<img 
 				src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" 
 				class="d-block w-100" 
 				alt="Image d'un concert avec de nombreuses personnes vu de face, image du carousel"
-				>
+				loading="lazy">
 			</div>
 			<div class="carousel-item">
 				<img 
 				src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" 
 				class="d-block w-100" 
 				alt="Photo prise d'un mariage, image du carousel"
-				>
+				loading="lazy">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -72,7 +77,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.webp" alt="Photo vu de face de la Photographe, Nina">
+		<img src="./assets/images/nina.webp" alt="Photo vu de face de la Photographe, Nina" loading="lazy">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -85,15 +90,15 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Image de la gallery catégorie Concert">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Image de la gallery catégorie Entreprises">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Image de la gallery catégorie Entreprises">
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Image de la gallery catégorie Mariages">
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Image de la gallery catégorie Portrait">
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Image de la gallery catégorie Mariages">
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Image de la gallery catégorie Portrait">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Image de la gallery catégorie Concert">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Image de la gallery catégorie Entreprises">
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Image de la gallery catégorie Concert" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Image de la gallery catégorie Entreprises" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Image de la gallery catégorie Entreprises" loading="lazy">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Image de la gallery catégorie Mariages" loading="lazy">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Image de la gallery catégorie Portrait" loading="lazy">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Image de la gallery catégorie Mariages" loading="lazy">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Image de la gallery catégorie Portrait" loading="lazy">
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Image de la gallery catégorie Concert" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Image de la gallery catégorie Entreprises" loading="lazy">
 		</div>
 	</div>
 	<div class="quote">
@@ -161,7 +166,7 @@
 					<input type="text" name="nom" id="nom" required>
 					
 					<label for="email">Email</label>
-					<input type="email" name="email" id="email" required>
+					<input type="email" name="email" id="email" required autocomplete="email">
 				</fieldset>
 				
 				<fieldset>
@@ -174,7 +179,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.webp" alt="Photo d'un appareil photo au style rétro">
+			<img src="./assets/images/camera.webp" alt="Photo d'un appareil photo au style rétro" loading="lazy">
 		</div>
 	</div>
 </div>
