Trying to preload bootstrap & googleFont to optimize the performance

--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="preload" as="style" href="./assets/bootstrap/bootstrap.css" />
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" media="all">
+
+
 	<link rel="stylesheet" href="./assets/style.css" media="all">
 	<link rel="preconnect" href="https://fonts.googleapis.com" media="all">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin media="all">
+
+	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" />
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 
 	<meta 
