Slider Img changed for better Quality ones ( before was too "pixelated" )

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 				src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" 
 				class="d-block w-100" 
 				alt="Image d'un businessman Japonais de dos, image du carousel"
-				loading="lazy">
+				loading="lazy"
+				>
 			</div>
 			<div class="carousel-item">
 				<img 
