--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" media="all">
 
 
-	<link rel="stylesheet" href="./assets/style.css" media="all">
+	<link rel="stylesheet" rel="preload" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com" media="all">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin media="all">
 
@@ -82,9 +82,12 @@
 		</button>
 	</div>
 </div>
+
+
+
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.webp" alt="Photo vu de face de la Photographe, Nina" loading="lazy">
+		<img src="./assets/images/nina.webp" alt="Photo vu de face de la Photographe, Nina" loading="lazy" class="nina-img">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -93,6 +96,9 @@
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
 </div>
+
+
+
 <div id="gallery">
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
