--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta  
+	name="description" 
+	content="Services de photographie professionnelle par Nina Carducci. Capturer des moments précieux avec une perspective unique. 
+			 Contact pour des séances photos personnalisées, des retouches et la création d'album."
+	>
 
-	<link rel="preload" as="style" href="./assets/bootstrap/bootstrap.css" />
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css" media="print" onload="this.media='all'">
-
-
+	<link rel="preload" as="style" href="./assets/bootstrap/bootstrap.min.css" >
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" media="print" onload="this.media='all'">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" />
+	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" >
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet" media="print" onload="this.media='all'">
-
-	<meta 
-	charset="UTF-8" 
-	name="description" 
-	content="Services de photographie professionnelle par Nina Carducci. Capturer des moments précieux avec une perspective unique. Contact pour des séances photos personnalisées, des retouches et la création d'album."
-	>
 
 	<title>Nina Photographe Professionnelle 📷</title>
 </head>
@@ -196,7 +193,7 @@
 	</div>
 </div>
 
-<script src="./assets/bootstrap/bootstrap.bundle.js" defer></script>
+<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 <script src="./assets/maugallery.js" defer></script>
 <script src="./assets/scripts.js" defer></script>
