--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 			 Contact pour des séances photos personnalisées, des retouches et la création d'album."
 	>
 
-	<link rel="preload" as="style" href="./assets/bootstrap/bootstrap.min.css" >
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" >
 
 	<link rel="stylesheet" href="./assets/style.css">
 
@@ -18,6 +16,8 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" >
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 	<title>Nina Photographe Professionnelle 📷 - Bordeaux</title>
 </head>
@@ -33,7 +33,7 @@
 
 			<li>
 				<a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
-					<img src="assets/images/instagram.webp" alt="Image du Réseau Social Instagram" class="social-media-img" loading="lazy">
+					<img src="assets/images/instagram.webp" alt="Image du Réseau Social Instagram" title="logo d'instagram" class="social-media-img" loading="lazy">
 				</a>
 			</li>
 		</ul>
@@ -51,7 +51,8 @@
 			<div class="carousel-item active">
 				<img 
 				src="./assets/images/slider/Portrait_ryoji_iwata_1920.webp" class="d-block w-100 carrousel"
-				alt="Photographie d'un businessman Japonais traversant traversant le carrefour Hachikô"
+				alt="Photographie d'un businessman Japonais traversant traversant le carrefour de Shibuya"
+				title="businessman Japonais traversant le carrefour de Shibuya"
 				srcset="
 				./assets/images/slider/Portrait_ryoji_iwata_375.webp 375w,
 				./assets/images/slider/Portrait_ryoji_iwata_768.webp 768w,
@@ -69,6 +70,8 @@
 				src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" 
 				class="d-block w-100 carrousel" 
 				alt="Image d'un concert avec de nombreuses personnes vu de face, image du carousel"
+				title="Image prise d'un concert"
+				loading="lazy"
 				>
 			</div>
 			<div class="carousel-item">
@@ -76,6 +79,8 @@
 				src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" 
 				class="d-block w-100 carrousel" 
 				alt="Photo prise d'un mariage, image du carousel"
+				title="Photo d'un mariage"
+				loading="lazy"
 				>
 			</div>
 		</div>
@@ -94,7 +99,7 @@
 
 <div id="about">
 	<div class="picture left">
-		<img class="nina-img" src="./assets/images/nina.webp" alt="Photo vu de face de la Photographe, Nina" loading="lazy">
+		<img loading="lazy" class="nina-img" src="./assets/images/nina.webp" alt="Photo vu de face de la Photographe, Nina" title="photo de la photographe, Nina">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -110,15 +115,15 @@
 	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Image de la gallery catégorie Concert" loading="lazy">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Image de la gallery catégorie Entreprises" loading="lazy">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Image de la gallery catégorie Entreprises d'une femme souriante" loading="lazy">
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Image de la gallery catégorie Mariages" loading="lazy">
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Image de la gallery catégorie Portrait" loading="lazy">
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Image de la gallery catégorie Mariages d'un homme et une femme devant un palmier" loading="lazy">
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Image de la gallery catégorie Portrait d'une femme derrière un grillage" loading="lazy">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Image de la gallery catégorie Concert" loading="lazy">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Image de la gallery catégorie Entreprises" loading="lazy">
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="Image de la gallery catégorie Concert" title="Image de la gallery catégorie Concert" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Image de la gallery catégorie Entreprises" title="Image de la gallery catégorie Entreprises" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="Image de la gallery catégorie Entreprises d'une femme souriante" title="Image de la gallery catégorie Entreprises d'une femme souriante" loading="lazy">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Image de la gallery catégorie Mariages" title="Image de la gallery catégorie Mariages" loading="lazy">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Image de la gallery catégorie Portrait" title="Image de la gallery catégorie Portrait" loading="lazy">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="Image de la gallery catégorie Mariages d'un homme et une femme devant un palmier" title="Image de la gallery catégorie Mariages d'un homme et une femme devant un palmier" loading="lazy">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Image de la gallery catégorie Portrait d'une femme derrière un grillage" title="Image de la gallery catégorie Portrait d'une femme derrière un grillage" loading="lazy">
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="Image de la gallery catégorie Concert" title="Image de la gallery catégorie Concert" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Image de la gallery catégorie Entreprises" title="Image de la gallery catégorie Entreprises" loading="lazy">
 		</div>
 	</div>
 	<div class="quote">
@@ -199,14 +204,14 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.webp" alt="Photo d'un appareil photo au style rétro" loading="lazy" class="retro-img">
+			<img src="./assets/images/camera.webp" loading="lazy" alt="Photo d'un appareil photo au style rétro" title="Photo d'un appareil photo rétro" class="retro-img">
 		</div>
 	</div>
 </div>
 
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" ></script>
-<script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 <script src="./assets/maugallery.js"></script>
 <script src="./assets/scripts.js" ></script>
 
