--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta  
 	name="description" 
-	content="Services de photographie professionnelle par Nina Carducci. Capturer des moments précieux avec une perspective unique. 
-			 Contact pour des séances photos personnalisées, des retouches et la création d'album."
+	content="Photographie professionnelle par Nina Carducci. Capturant des moments précieux avec une perspective unique. Séances photos personnalisées, retouches et albums."
 	>
 
 
