--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	
+	<!-- Open Graph Meta tags for socials : -->
+	<meta property="og:title" content="Nina Carducci - Photographie Professionnelle" /> <!-- between 40 Pho - 60 characters Desk -->
+	<meta property="og:description" content="Services de photographie professionnelle par Nina Carducci. Capturant des moments précieux avec une perspective unique. Séances photos personnalisées, retouches et albums.">
+	<meta property="og:image" content="./assets/images/openGraphImg/MetaOpenGraphImg.webp" />
+	<meta property="og:type" content="business.business">
+	<meta property="og:url" content="https://astuki.github.io/Projet9OC/"> <!-- Since it's an exercice it will just be my github link -->
+	<meta property="og:locale" content="fr_FR" /> <!-- For OG -->
+	<meta name="google-site-verification" content="Code de Vérification" > <!-- Balise Meta Site Verification since it's a github Website the code is only a placeholder  -->
+	<!-- End Of Open Graph Meta tags for socials : -->
 
 	<title>Nina Photographe Professionnelle 📷 - Bordeaux</title>
 </head>
