--- a/index.html
+++ b/index.html
@@ -18,15 +18,41 @@
 
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 	
-	<!-- Open Graph Meta tags for socials : -->
+	<!-- Open Graph Meta tags for Facebook : -->
 	<meta property="og:title" content="Nina Carducci - Photographie Professionnelle" /> <!-- between 40 Pho - 60 characters Desk -->
 	<meta property="og:description" content="Services de photographie professionnelle par Nina Carducci. Capturant des moments précieux avec une perspective unique. Séances photos personnalisées, retouches et albums.">
-	<meta property="og:image" content="./assets/images/openGraphImg/MetaOpenGraphImg.webp" />
+	<meta property="og:image" content="./assets/images/openGraphImg/MetaOpenGraphImg.webp" /> <!-- Since it's an exercice it will just be a random image a personnalised one with a logo would be the best -->
 	<meta property="og:type" content="business.business">
 	<meta property="og:url" content="https://astuki.github.io/Projet9OC/"> <!-- Since it's an exercice it will just be my github link -->
 	<meta property="og:locale" content="fr_FR" /> <!-- For OG -->
 	<meta name="google-site-verification" content="Code de Vérification" > <!-- Balise Meta Site Verification since it's a github Website the code is only a placeholder  -->
-	<!-- End Of Open Graph Meta tags for socials : -->
+	<!-- End Of Open Graph Meta tags for Facebook : -->
+
+	<!-- Meta Tags for Twitter Cards -->
+	<meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@ninaCarducci">
+    <meta name="twitter:title" content="Nina Photographe Professionnelle 📷 - Bordeaux">
+    <meta name="twitter:description" content="Photographie professionnelle par Nina Carducci. Capturant des moments précieux avec une perspective unique. Séances photos personnalisées, retouches et albums.">
+    <meta name="twitter:image" content="./assets/images/openGraphImg/MetaOpenGraphImg.webp"> <!-- Since it's an exercice it will just be a random image a personnalised one with a logo would be the best -->
+	<!-- End of Meta Tags for Twitter Cards -->
+
+	<!-- Local SEO -->
+	<script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "LocalBusiness",
+          "name": "nina Carducci Photo",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "68 Avenue Alsace-Lorraine",
+            "addressLocality": "Bordeaux",
+            "postalCode": "33200"
+          },
+          "telephone": "05 56 67 78 89",
+          "openingHours": "Mo-Fr 10:00-19:00"
+        }
+    </script>
+	<!-- End Of Local SEO -->
 
 	<title>Nina Photographe Professionnelle 📷 - Bordeaux</title>
 </head>
