Fix loading eager carrousel

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 				sizes="(min-width: 2048px) 1920px, 100vw"
 				width="1920"
 				height="888"
+				loading="eager"
 				>
 			</div>
 			<div class="carousel-item">
