Fix mentorat Load Time Img hébergée

--- a/index.html
+++ b/index.html
@@ -85,15 +85,9 @@
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img 
-				src="./assets/images/slider/Portrait_ryoji_iwata_1920.webp" class="d-block w-100 carrousel"
+				src="https://i.ibb.co/gzMQJ9T/ryoji-iwata-w-UZjn-Ov7t0g-unsplash-1600w.webp" class="d-block w-100 carrousel"
 				alt="Photographie d'un businessman Japonais traversant traversant le carrefour de Shibuya"
 				title="businessman Japonais traversant le carrefour de Shibuya"
-				srcset="
-				./assets/images/slider/Portrait_ryoji_iwata_375.webp 375w,
-				./assets/images/slider/Portrait_ryoji_iwata_768.webp 768w,
-				./assets/images/slider/Portrait_ryoji_iwata_1024.webp 1024w,
-				./assets/images/slider/Portrait_ryoji_iwata_1440.webp 1440w,
-				https://i.ibb.co/gzMQJ9T/ryoji-iwata-w-UZjn-Ov7t0g-unsplash-1600w.webp"
 				sizes="(min-width: 2048px) 1920px, 100vw"
 				width="1920"
 				height="888"
