Fix mentorat Loading Time

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img 
-				src="https://i.ibb.co/gzMQJ9T/ryoji-iwata-w-UZjn-Ov7t0g-unsplash-1600w.webp" class="d-block w-100 carrousel"
+				src="./assets/images/slider/photo-professionnel_720w.webp" class="d-block w-100 carrousel"
 				alt="Photographie d'un businessman Japonais traversant traversant le carrefour de Shibuya"
 				title="businessman Japonais traversant le carrefour de Shibuya"
 				sizes="(min-width: 2048px) 1920px, 100vw"
